// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticlePage is rendered correctly to match the snapshot with revision history 1`] = `
.emotion-0 {
  margin-bottom: 3rem;
  border-bottom: 0.25rem solid hsla(0, 0%, 75%);
}

.emotion-2 {
  margin-bottom: 0.3rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
}

.emotion-4>* {
  margin-right: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-8 {
  margin-right: 0.5rem;
  font-weight: 600;
}

.emotion-10 {
  font-weight: bolder;
  color: hsla(212, 72%, 40%);
}

.emotion-18 {
  margin: 0 0 1rem;
  font-size: 2.16em;
}

.emotion-20 {
  margin: 0;
  color: hsla(0, 0%, 15%);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-filter: drop-shadow(
        2px 2px 1px hsla(148, 72%, 80%)
      );
  filter: drop-shadow(
        2px 2px 1px hsla(148, 72%, 80%)
      );
}

.emotion-20:visited {
  color: hsla(0, 0%, 15%);
}

.emotion-22 {
  margin-top: 0.3rem;
}

.emotion-24 {
  margin-top: 2rem;
  margin-bottom: 0.5rem;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-26>* {
  margin-right: 0.7rem;
  margin-bottom: 0.7rem;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsla(0, 0%, 40%);
}

.emotion-30 {
  padding: 1rem 0 0.7rem;
  margin: 0 0 5rem;
  border-color: hsla(0, 0%, 75%);
  border-style: dotted;
  border-width: 2px 0;
}

.emotion-34 {
  margin-bottom: 0.75rem;
  font-weight: 600;
  cursor: pointer;
  outline: none;
}

.emotion-36 {
  padding-left: 0;
  margin: 0;
}

.emotion-38 {
  margin-bottom: 0.75rem;
  list-style: none;
}

.emotion-42 {
  font-weight: bolder;
}

.emotion-62 h1,
.emotion-62 h2 {
  padding-bottom: 0.3em;
  margin-top: 2em;
  border-bottom: 1px solid hsla(0, 0%, 75%);
}

.emotion-62 h3,
.emotion-62 h4,
.emotion-62 h5,
.emotion-62 h6 {
  margin-top: 1em;
}

.emotion-62 code,
.emotion-62 pre {
  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
  word-break: normal;
}

.emotion-62 pre {
  white-space: pre-wrap;
}

.emotion-62 code:not([class]) {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 0.85em;
  background-color: hsla(0, 0%, 92.5%);
  border-radius: 3px;
}

.emotion-62 blockquote,
.emotion-62 details,
.emotion-62 dl,
.emotion-62 ol,
.emotion-62 p,
.emotion-62 pre,
.emotion-62 table,
.emotion-62 ul {
  margin-top: 0;
  margin-bottom: 1.8rem;
}

.emotion-62 ol ol,
.emotion-62 ul ol {
  list-style-type: lower-roman;
}

.emotion-62 li>p {
  margin-top: 1.6rem;
}

.emotion-62 li+li {
  margin-top: 0.25em;
}

.emotion-62 blockquote {
  padding: 0 1em;
  margin-left: 0;
  color: hsla(0, 0%, 40%);
  border-left: 0.25em solid hsla(212, 72%, 90%);
}

.emotion-62 blockquote:first-of-type {
  margin-top: 0;
}

.emotion-62 blockquote:last-of-type {
  margin-bottom: 0;
}

.emotion-62 div.code-toolbar>.toolbar {
  top: 0.3em;
  right: 0.3em;
  -webkit-transition: none;
  transition: none;
}

.emotion-62 div.code-toolbar>.toolbar span {
  font-size: 0.85em;
  border-radius: 10px;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "blue": Object {
          "base": "hsla(212, 72%, 60%)",
          "dark": "hsla(212, 72%, 50%)",
          "dark2": "hsla(212, 72%, 40%)",
          "dark3": "hsla(212, 72%, 30%)",
          "dark4": "hsla(212, 72%, 20%)",
          "light": "hsla(212, 72%, 70%)",
          "light2": "hsla(212, 72%, 80%)",
          "light3": "hsla(212, 72%, 90%)",
        },
        "border": Object {
          "primary": "hsla(0, 0%, 50%)",
          "primaryLight": "hsla(0, 0%, 75%)",
        },
        "green": Object {
          "base": "hsla(148, 72%, 60%)",
          "dark": "hsla(148, 72%, 50%)",
          "dark2": "hsla(148, 72%, 40%)",
          "dark3": "hsla(148, 72%, 30%)",
          "dark4": "hsla(148, 72%, 20%)",
          "light": "hsla(148, 72%, 70%)",
          "light2": "hsla(148, 72%, 80%)",
          "light3": "hsla(148, 72%, 90%)",
        },
        "primary": "hsla(212, 72%, 60%)",
        "primaryDark": "hsla(212, 72%, 50%)",
        "primaryLight": "hsla(212, 72%, 70%)",
        "text": Object {
          "accent": "hsla(148, 72%, 50%)",
          "primary": "hsla(0, 0%, 15%)",
          "primaryLight": "hsla(0, 0%, 40%)",
          "secondary": "hsla(212, 72%, 40%)",
        },
        "yellow": Object {
          "base": "hsla(60, 72%, 60%)",
          "dark": "hsla(60, 72%, 50%)",
          "dark2": "hsla(60, 72%, 40%)",
          "dark3": "hsla(60, 72%, 30%)",
          "dark4": "hsla(60, 72%, 20%)",
          "light": "hsla(60, 72%, 70%)",
          "light2": "hsla(60, 72%, 80%)",
          "light3": "hsla(60, 72%, 90%)",
        },
      },
    }
  }
>
  <ArticlePage
    article={
      Object {
        "attributes": Object {
          "id": "example-id",
          "publishedAt": 2021-01-02T03:04:56.000Z,
          "title": "Example01",
          "updatedAt": 2021-01-02T03:04:56.000Z,
        },
        "body": "## test

bluhbluhbluh",
        "changeLogs": Array [
          Object {
            "author": "8ayac",
            "date": 2021-01-02T03:04:05.000Z,
            "description": ":test_prefix: this is a test commit 01",
            "id": "0000001",
          },
          Object {
            "author": "8ayac",
            "date": 2021-06-07T08:09:10.000Z,
            "description": ":test_prefix: this is a test commit 02",
            "id": "0000002",
          },
          Object {
            "author": "8ayac",
            "date": 2021-11-12T13:14:15.000Z,
            "description": ":test_prefix: this is a test commit 03",
            "id": "0000003",
          },
        ],
      }
    }
  >
    <SEO
      article={
        Object {
          "attributes": Object {
            "id": "example-id",
            "publishedAt": 2021-01-02T03:04:56.000Z,
            "title": "Example01",
            "updatedAt": 2021-01-02T03:04:56.000Z,
          },
          "body": "## test

bluhbluhbluh",
          "changeLogs": Array [
            Object {
              "author": "8ayac",
              "date": 2021-01-02T03:04:05.000Z,
              "description": ":test_prefix: this is a test commit 01",
              "id": "0000001",
            },
            Object {
              "author": "8ayac",
              "date": 2021-06-07T08:09:10.000Z,
              "description": ":test_prefix: this is a test commit 02",
              "id": "0000002",
            },
            Object {
              "author": "8ayac",
              "date": 2021-11-12T13:14:15.000Z,
              "description": ":test_prefix: this is a test commit 03",
              "id": "0000003",
            },
          ],
        }
      }
    >
      <_default
        openGraph={
          Object {
            "article": Object {
              "authors": Array [
                "8ayac",
              ],
              "modifiedTime": "2021-11-12T13:14:15.000Z",
              "publishedTime": "2021-01-02T03:04:56.000Z",
              "tags": undefined,
            },
            "title": "Example01 - もしくはこれ",
            "type": "article",
          }
        }
        title="Example01"
      >
        <Head>
          <_default
            headManager={Object {}}
            inAmpMode={false}
            reduceComponentsToState={[Function]}
          />
        </Head>
      </_default>
    </SEO>
    <ArticleHeader
      article={
        Object {
          "attributes": Object {
            "id": "example-id",
            "publishedAt": 2021-01-02T03:04:56.000Z,
            "title": "Example01",
            "updatedAt": 2021-01-02T03:04:56.000Z,
          },
          "body": "## test

bluhbluhbluh",
          "changeLogs": Array [
            Object {
              "author": "8ayac",
              "date": 2021-01-02T03:04:05.000Z,
              "description": ":test_prefix: this is a test commit 01",
              "id": "0000001",
            },
            Object {
              "author": "8ayac",
              "date": 2021-06-07T08:09:10.000Z,
              "description": ":test_prefix: this is a test commit 02",
              "id": "0000002",
            },
            Object {
              "author": "8ayac",
              "date": 2021-11-12T13:14:15.000Z,
              "description": ":test_prefix: this is a test commit 03",
              "id": "0000003",
            },
          ],
        }
      }
    >
      <BodyHeader
        afterTitle={
          <TagListWrapperDiv>
            <CategoryTagList
              withPreIcon={true}
            />
          </TagListWrapperDiv>
        }
        beforeTitle={
          <DateTimeWrapperDiv>
            <DateTime
              date={2021-01-02T03:04:56.000Z}
              description="Published At"
            />
            <DateTime
              date={2021-01-02T03:04:56.000Z}
              description="Updated At"
            />
          </DateTimeWrapperDiv>
        }
        linkTo="/articles/2021-01-02/example-id"
        title="Example01"
      >
        <WrapperHeader>
          <header
            className="emotion-0 emotion-1"
          >
            <BeforeTitleDiv>
              <div
                className="emotion-2 emotion-3"
              >
                <DateTimeWrapperDiv>
                  <div
                    className="emotion-4 emotion-5"
                  >
                    <DateTime
                      date={2021-01-02T03:04:56.000Z}
                      description="Published At"
                    >
                      <ComponentWrapperDiv>
                        <div
                          className="emotion-6 emotion-7"
                        >
                          <DescriptionSpan>
                            <span
                              className="emotion-8 emotion-9"
                            >
                              Published At:
                            </span>
                          </DescriptionSpan>
                          <ISODateTime>
                            <time
                              className="emotion-10 emotion-11"
                            >
                              2021-01-02T03:04:56.000Z
                            </time>
                          </ISODateTime>
                        </div>
                      </ComponentWrapperDiv>
                    </DateTime>
                    <DateTime
                      date={2021-01-02T03:04:56.000Z}
                      description="Updated At"
                    >
                      <ComponentWrapperDiv>
                        <div
                          className="emotion-6 emotion-7"
                        >
                          <DescriptionSpan>
                            <span
                              className="emotion-8 emotion-9"
                            >
                              Updated At:
                            </span>
                          </DescriptionSpan>
                          <ISODateTime>
                            <time
                              className="emotion-10 emotion-11"
                            >
                              2021-01-02T03:04:56.000Z
                            </time>
                          </ISODateTime>
                        </div>
                      </ComponentWrapperDiv>
                    </DateTime>
                  </div>
                </DateTimeWrapperDiv>
              </div>
            </BeforeTitleDiv>
            <TitleH1>
              <h1
                className="emotion-18 emotion-19"
              >
                <Link
                  href="/articles/2021-01-02/example-id"
                  passHref={true}
                >
                  <TitleAnchor
                    href="/articles/2021-01-02/example-id"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <a
                      className="emotion-20 emotion-21"
                      href="/articles/2021-01-02/example-id"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      Example01
                    </a>
                  </TitleAnchor>
                </Link>
              </h1>
            </TitleH1>
            <AfterTitleDiv>
              <div
                className="emotion-22 emotion-23"
              >
                <TagListWrapperDiv>
                  <div
                    className="emotion-24 emotion-25"
                  >
                    <CategoryTagList
                      withPreIcon={true}
                    >
                      <S-ComponentWrapperDiv>
                        <div
                          className="emotion-26 emotion-27"
                        >
                          <S-PreIconWrapperDiv>
                            <div
                              className="emotion-28 emotion-29"
                            >
                              <FontAwesomeIcon
                                border={false}
                                fixedWidth={false}
                                flip={null}
                                icon={
                                  Object {
                                    "icon": Array [
                                      640,
                                      512,
                                      Array [],
                                      "f02c",
                                      "M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z",
                                    ],
                                    "iconName": "tags",
                                    "prefix": "fas",
                                  }
                                }
                                inverse={false}
                                listItem={false}
                                mask={null}
                                pull={null}
                                pulse={false}
                                rotation={null}
                                size={null}
                                spin={false}
                                swapOpacity={false}
                                symbol={false}
                                title=""
                                transform={null}
                              >
                                <svg
                                  aria-hidden="true"
                                  className="svg-inline--fa fa-tags fa-w-20 "
                                  data-icon="tags"
                                  data-prefix="fas"
                                  focusable="false"
                                  role="img"
                                  style={Object {}}
                                  viewBox="0 0 640 512"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z"
                                    fill="currentColor"
                                    style={Object {}}
                                  />
                                </svg>
                              </FontAwesomeIcon>
                            </div>
                          </S-PreIconWrapperDiv>
                        </div>
                      </S-ComponentWrapperDiv>
                    </CategoryTagList>
                  </div>
                </TagListWrapperDiv>
              </div>
            </AfterTitleDiv>
          </header>
        </WrapperHeader>
      </BodyHeader>
    </ArticleHeader>
    <RevisionHistoryWrapperDiv>
      <div
        className="emotion-30 emotion-31"
      >
        <ArticleRevisionRecordList
          log={
            Array [
              Object {
                "author": "8ayac",
                "date": 2021-01-02T03:04:05.000Z,
                "description": ":test_prefix: this is a test commit 01",
                "id": "0000001",
              },
              Object {
                "author": "8ayac",
                "date": 2021-06-07T08:09:10.000Z,
                "description": ":test_prefix: this is a test commit 02",
                "id": "0000002",
              },
              Object {
                "author": "8ayac",
                "date": 2021-11-12T13:14:15.000Z,
                "description": ":test_prefix: this is a test commit 03",
                "id": "0000003",
              },
            ]
          }
        >
          <Details
            open={true}
          >
            <details
              className="emotion-32 emotion-33"
              open={true}
            >
              <Summary>
                <summary
                  className="emotion-34 emotion-35"
                >
                  Revision History
                </summary>
              </Summary>
              <LogList
                log={
                  Array [
                    Object {
                      "author": "8ayac",
                      "date": 2021-01-02T03:04:05.000Z,
                      "description": ":test_prefix: this is a test commit 01",
                      "id": "0000001",
                    },
                    Object {
                      "author": "8ayac",
                      "date": 2021-06-07T08:09:10.000Z,
                      "description": ":test_prefix: this is a test commit 02",
                      "id": "0000002",
                    },
                    Object {
                      "author": "8ayac",
                      "date": 2021-11-12T13:14:15.000Z,
                      "description": ":test_prefix: this is a test commit 03",
                      "id": "0000003",
                    },
                  ]
                }
              >
                <LogList>
                  <ul
                    className="emotion-36 emotion-37"
                  >
                    <LogListItem
                      key="0000001"
                    >
                      <li
                        className="emotion-38 emotion-39"
                      >
                        <UpdateDateTime>
                          <time
                            className="emotion-40 emotion-41"
                          >
                            2021-01-02T03:04:05.000Z
                          </time>
                        </UpdateDateTime>
                         
                        <UpdateDescriptionSpan>
                          <span
                            className="emotion-42 emotion-43"
                          >
                            this is a test commit 01
                          </span>
                        </UpdateDescriptionSpan>
                         
                        (
                        <ToGitHubCommitAnchor
                          href="https://github.com/8ayac/blog.8ay.ac/commit/0000001"
                          rel="noopener"
                          target="_blank"
                        >
                          <a
                            className="emotion-44 emotion-45"
                            href="https://github.com/8ayac/blog.8ay.ac/commit/0000001"
                            rel="noopener"
                            target="_blank"
                          >
                            #
                            0000001
                          </a>
                        </ToGitHubCommitAnchor>
                         
                        by 
                        8ayac
                        )
                      </li>
                    </LogListItem>
                    <LogListItem
                      key="0000002"
                    >
                      <li
                        className="emotion-38 emotion-39"
                      >
                        <UpdateDateTime>
                          <time
                            className="emotion-40 emotion-41"
                          >
                            2021-06-07T08:09:10.000Z
                          </time>
                        </UpdateDateTime>
                         
                        <UpdateDescriptionSpan>
                          <span
                            className="emotion-42 emotion-43"
                          >
                            this is a test commit 02
                          </span>
                        </UpdateDescriptionSpan>
                         
                        (
                        <ToGitHubCommitAnchor
                          href="https://github.com/8ayac/blog.8ay.ac/commit/0000002"
                          rel="noopener"
                          target="_blank"
                        >
                          <a
                            className="emotion-44 emotion-45"
                            href="https://github.com/8ayac/blog.8ay.ac/commit/0000002"
                            rel="noopener"
                            target="_blank"
                          >
                            #
                            0000002
                          </a>
                        </ToGitHubCommitAnchor>
                         
                        by 
                        8ayac
                        )
                      </li>
                    </LogListItem>
                    <LogListItem
                      key="0000003"
                    >
                      <li
                        className="emotion-38 emotion-39"
                      >
                        <UpdateDateTime>
                          <time
                            className="emotion-40 emotion-41"
                          >
                            2021-11-12T13:14:15.000Z
                          </time>
                        </UpdateDateTime>
                         
                        <UpdateDescriptionSpan>
                          <span
                            className="emotion-42 emotion-43"
                          >
                            this is a test commit 03
                          </span>
                        </UpdateDescriptionSpan>
                         
                        (
                        <ToGitHubCommitAnchor
                          href="https://github.com/8ayac/blog.8ay.ac/commit/0000003"
                          rel="noopener"
                          target="_blank"
                        >
                          <a
                            className="emotion-44 emotion-45"
                            href="https://github.com/8ayac/blog.8ay.ac/commit/0000003"
                            rel="noopener"
                            target="_blank"
                          >
                            #
                            0000003
                          </a>
                        </ToGitHubCommitAnchor>
                         
                        by 
                        8ayac
                        )
                      </li>
                    </LogListItem>
                  </ul>
                </LogList>
              </LogList>
            </details>
          </Details>
        </ArticleRevisionRecordList>
      </div>
    </RevisionHistoryWrapperDiv>
    <MarkdownRenderer
      content="## test

bluhbluhbluh"
    >
      <ConvertedMdBody>
        <div
          className="emotion-62 emotion-63"
        >
          <ReactMarkdown
            plugins={
              Array [
                [Function],
                [Function],
              ]
            }
            renderers={
              Object {
                "footnoteDefinition": [Function],
                "footnoteReference": [Function],
              }
            }
            source="## test

bluhbluhbluh"
            transformImageUri={[Function]}
            transformLinkUri={[Function]}
          >
            <Root
              key="root-1-1-0"
              node={
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "position": Object {
                            "end": Object {
                              "column": 8,
                              "line": 1,
                              "offset": 7,
                            },
                            "start": Object {
                              "column": 4,
                              "line": 1,
                              "offset": 3,
                            },
                          },
                          "type": "text",
                          "value": "test",
                        },
                      ],
                      "depth": 2,
                      "position": Object {
                        "end": Object {
                          "column": 8,
                          "line": 1,
                          "offset": 7,
                        },
                        "start": Object {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "heading",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "position": Object {
                            "end": Object {
                              "column": 13,
                              "line": 3,
                              "offset": 23,
                            },
                            "start": Object {
                              "column": 1,
                              "line": 3,
                              "offset": 11,
                            },
                          },
                          "type": "text",
                          "value": "bluhbluhbluh",
                        },
                      ],
                      "position": Object {
                        "end": Object {
                          "column": 13,
                          "line": 3,
                          "offset": 23,
                        },
                        "start": Object {
                          "column": 1,
                          "line": 3,
                          "offset": 11,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 13,
                      "line": 3,
                      "offset": 23,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "root",
                }
              }
            >
              <Heading
                key="heading-1-1-0"
                level={2}
                node={
                  Object {
                    "children": Array [
                      Object {
                        "position": Object {
                          "end": Object {
                            "column": 8,
                            "line": 1,
                            "offset": 7,
                          },
                          "start": Object {
                            "column": 4,
                            "line": 1,
                            "offset": 3,
                          },
                        },
                        "type": "text",
                        "value": "test",
                      },
                    ],
                    "depth": 2,
                    "position": Object {
                      "end": Object {
                        "column": 8,
                        "line": 1,
                        "offset": 7,
                      },
                      "start": Object {
                        "column": 1,
                        "line": 1,
                        "offset": 0,
                      },
                    },
                    "type": "heading",
                  }
                }
              >
                <h2>
                  <TextRenderer
                    key="text-1-4-0"
                    node={
                      Object {
                        "position": Object {
                          "end": Object {
                            "column": 8,
                            "line": 1,
                            "offset": 7,
                          },
                          "start": Object {
                            "column": 4,
                            "line": 1,
                            "offset": 3,
                          },
                        },
                        "type": "text",
                        "value": "test",
                      }
                    }
                    nodeKey="text-1-4-0"
                    value="test"
                  >
                    test
                  </TextRenderer>
                </h2>
              </Heading>
              <p
                key="paragraph-3-1-1"
              >
                <TextRenderer
                  key="text-3-1-0"
                  node={
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 13,
                          "line": 3,
                          "offset": 23,
                        },
                        "start": Object {
                          "column": 1,
                          "line": 3,
                          "offset": 11,
                        },
                      },
                      "type": "text",
                      "value": "bluhbluhbluh",
                    }
                  }
                  nodeKey="text-3-1-0"
                  value="bluhbluhbluh"
                >
                  bluhbluhbluh
                </TextRenderer>
              </p>
            </Root>
          </ReactMarkdown>
        </div>
      </ConvertedMdBody>
    </MarkdownRenderer>
  </ArticlePage>
</ThemeProvider>
`;

exports[`ArticlePage is rendered correctly to match the snapshot without revision history 1`] = `
.emotion-0 {
  margin-bottom: 3rem;
  border-bottom: 0.25rem solid hsla(0, 0%, 75%);
}

.emotion-2 {
  margin-bottom: 0.3rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1rem;
}

.emotion-4>* {
  margin-right: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-8 {
  margin-right: 0.5rem;
  font-weight: 600;
}

.emotion-10 {
  font-weight: bolder;
  color: hsla(212, 72%, 40%);
}

.emotion-18 {
  margin: 0 0 1rem;
  font-size: 2.16em;
}

.emotion-20 {
  margin: 0;
  color: hsla(0, 0%, 15%);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-filter: drop-shadow(
        2px 2px 1px hsla(148, 72%, 80%)
      );
  filter: drop-shadow(
        2px 2px 1px hsla(148, 72%, 80%)
      );
}

.emotion-20:visited {
  color: hsla(0, 0%, 15%);
}

.emotion-22 {
  margin-top: 0.3rem;
}

.emotion-24 {
  margin-top: 2rem;
  margin-bottom: 0.5rem;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-26>* {
  margin-right: 0.7rem;
  margin-bottom: 0.7rem;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: hsla(0, 0%, 40%);
}

.emotion-30 h1,
.emotion-30 h2 {
  padding-bottom: 0.3em;
  margin-top: 2em;
  border-bottom: 1px solid hsla(0, 0%, 75%);
}

.emotion-30 h3,
.emotion-30 h4,
.emotion-30 h5,
.emotion-30 h6 {
  margin-top: 1em;
}

.emotion-30 code,
.emotion-30 pre {
  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
  word-break: normal;
}

.emotion-30 pre {
  white-space: pre-wrap;
}

.emotion-30 code:not([class]) {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 0.85em;
  background-color: hsla(0, 0%, 92.5%);
  border-radius: 3px;
}

.emotion-30 blockquote,
.emotion-30 details,
.emotion-30 dl,
.emotion-30 ol,
.emotion-30 p,
.emotion-30 pre,
.emotion-30 table,
.emotion-30 ul {
  margin-top: 0;
  margin-bottom: 1.8rem;
}

.emotion-30 ol ol,
.emotion-30 ul ol {
  list-style-type: lower-roman;
}

.emotion-30 li>p {
  margin-top: 1.6rem;
}

.emotion-30 li+li {
  margin-top: 0.25em;
}

.emotion-30 blockquote {
  padding: 0 1em;
  margin-left: 0;
  color: hsla(0, 0%, 40%);
  border-left: 0.25em solid hsla(212, 72%, 90%);
}

.emotion-30 blockquote:first-of-type {
  margin-top: 0;
}

.emotion-30 blockquote:last-of-type {
  margin-bottom: 0;
}

.emotion-30 div.code-toolbar>.toolbar {
  top: 0.3em;
  right: 0.3em;
  -webkit-transition: none;
  transition: none;
}

.emotion-30 div.code-toolbar>.toolbar span {
  font-size: 0.85em;
  border-radius: 10px;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "blue": Object {
          "base": "hsla(212, 72%, 60%)",
          "dark": "hsla(212, 72%, 50%)",
          "dark2": "hsla(212, 72%, 40%)",
          "dark3": "hsla(212, 72%, 30%)",
          "dark4": "hsla(212, 72%, 20%)",
          "light": "hsla(212, 72%, 70%)",
          "light2": "hsla(212, 72%, 80%)",
          "light3": "hsla(212, 72%, 90%)",
        },
        "border": Object {
          "primary": "hsla(0, 0%, 50%)",
          "primaryLight": "hsla(0, 0%, 75%)",
        },
        "green": Object {
          "base": "hsla(148, 72%, 60%)",
          "dark": "hsla(148, 72%, 50%)",
          "dark2": "hsla(148, 72%, 40%)",
          "dark3": "hsla(148, 72%, 30%)",
          "dark4": "hsla(148, 72%, 20%)",
          "light": "hsla(148, 72%, 70%)",
          "light2": "hsla(148, 72%, 80%)",
          "light3": "hsla(148, 72%, 90%)",
        },
        "primary": "hsla(212, 72%, 60%)",
        "primaryDark": "hsla(212, 72%, 50%)",
        "primaryLight": "hsla(212, 72%, 70%)",
        "text": Object {
          "accent": "hsla(148, 72%, 50%)",
          "primary": "hsla(0, 0%, 15%)",
          "primaryLight": "hsla(0, 0%, 40%)",
          "secondary": "hsla(212, 72%, 40%)",
        },
        "yellow": Object {
          "base": "hsla(60, 72%, 60%)",
          "dark": "hsla(60, 72%, 50%)",
          "dark2": "hsla(60, 72%, 40%)",
          "dark3": "hsla(60, 72%, 30%)",
          "dark4": "hsla(60, 72%, 20%)",
          "light": "hsla(60, 72%, 70%)",
          "light2": "hsla(60, 72%, 80%)",
          "light3": "hsla(60, 72%, 90%)",
        },
      },
    }
  }
>
  <ArticlePage
    article={
      Object {
        "attributes": Object {
          "id": "example-id",
          "publishedAt": 2021-01-02T03:04:56.000Z,
          "title": "Example01",
          "updatedAt": 2021-01-02T03:04:56.000Z,
        },
        "body": "## test

bluhbluhbluh",
        "changeLogs": Array [],
      }
    }
  >
    <SEO
      article={
        Object {
          "attributes": Object {
            "id": "example-id",
            "publishedAt": 2021-01-02T03:04:56.000Z,
            "title": "Example01",
            "updatedAt": 2021-01-02T03:04:56.000Z,
          },
          "body": "## test

bluhbluhbluh",
          "changeLogs": Array [],
        }
      }
    >
      <_default
        openGraph={
          Object {
            "article": Object {
              "authors": Array [
                "8ayac",
              ],
              "modifiedTime": "2021-01-02T03:04:56.000Z",
              "publishedTime": "2021-01-02T03:04:56.000Z",
              "tags": undefined,
            },
            "title": "Example01 - もしくはこれ",
            "type": "article",
          }
        }
        title="Example01"
      >
        <Head>
          <_default
            headManager={Object {}}
            inAmpMode={false}
            reduceComponentsToState={[Function]}
          />
        </Head>
      </_default>
    </SEO>
    <ArticleHeader
      article={
        Object {
          "attributes": Object {
            "id": "example-id",
            "publishedAt": 2021-01-02T03:04:56.000Z,
            "title": "Example01",
            "updatedAt": 2021-01-02T03:04:56.000Z,
          },
          "body": "## test

bluhbluhbluh",
          "changeLogs": Array [],
        }
      }
    >
      <BodyHeader
        afterTitle={
          <TagListWrapperDiv>
            <CategoryTagList
              withPreIcon={true}
            />
          </TagListWrapperDiv>
        }
        beforeTitle={
          <DateTimeWrapperDiv>
            <DateTime
              date={2021-01-02T03:04:56.000Z}
              description="Published At"
            />
            <DateTime
              date={2021-01-02T03:04:56.000Z}
              description="Updated At"
            />
          </DateTimeWrapperDiv>
        }
        linkTo="/articles/2021-01-02/example-id"
        title="Example01"
      >
        <WrapperHeader>
          <header
            className="emotion-0 emotion-1"
          >
            <BeforeTitleDiv>
              <div
                className="emotion-2 emotion-3"
              >
                <DateTimeWrapperDiv>
                  <div
                    className="emotion-4 emotion-5"
                  >
                    <DateTime
                      date={2021-01-02T03:04:56.000Z}
                      description="Published At"
                    >
                      <ComponentWrapperDiv>
                        <div
                          className="emotion-6 emotion-7"
                        >
                          <DescriptionSpan>
                            <span
                              className="emotion-8 emotion-9"
                            >
                              Published At:
                            </span>
                          </DescriptionSpan>
                          <ISODateTime>
                            <time
                              className="emotion-10 emotion-11"
                            >
                              2021-01-02T03:04:56.000Z
                            </time>
                          </ISODateTime>
                        </div>
                      </ComponentWrapperDiv>
                    </DateTime>
                    <DateTime
                      date={2021-01-02T03:04:56.000Z}
                      description="Updated At"
                    >
                      <ComponentWrapperDiv>
                        <div
                          className="emotion-6 emotion-7"
                        >
                          <DescriptionSpan>
                            <span
                              className="emotion-8 emotion-9"
                            >
                              Updated At:
                            </span>
                          </DescriptionSpan>
                          <ISODateTime>
                            <time
                              className="emotion-10 emotion-11"
                            >
                              2021-01-02T03:04:56.000Z
                            </time>
                          </ISODateTime>
                        </div>
                      </ComponentWrapperDiv>
                    </DateTime>
                  </div>
                </DateTimeWrapperDiv>
              </div>
            </BeforeTitleDiv>
            <TitleH1>
              <h1
                className="emotion-18 emotion-19"
              >
                <Link
                  href="/articles/2021-01-02/example-id"
                  passHref={true}
                >
                  <TitleAnchor
                    href="/articles/2021-01-02/example-id"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <a
                      className="emotion-20 emotion-21"
                      href="/articles/2021-01-02/example-id"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      Example01
                    </a>
                  </TitleAnchor>
                </Link>
              </h1>
            </TitleH1>
            <AfterTitleDiv>
              <div
                className="emotion-22 emotion-23"
              >
                <TagListWrapperDiv>
                  <div
                    className="emotion-24 emotion-25"
                  >
                    <CategoryTagList
                      withPreIcon={true}
                    >
                      <S-ComponentWrapperDiv>
                        <div
                          className="emotion-26 emotion-27"
                        >
                          <S-PreIconWrapperDiv>
                            <div
                              className="emotion-28 emotion-29"
                            >
                              <FontAwesomeIcon
                                border={false}
                                fixedWidth={false}
                                flip={null}
                                icon={
                                  Object {
                                    "icon": Array [
                                      640,
                                      512,
                                      Array [],
                                      "f02c",
                                      "M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z",
                                    ],
                                    "iconName": "tags",
                                    "prefix": "fas",
                                  }
                                }
                                inverse={false}
                                listItem={false}
                                mask={null}
                                pull={null}
                                pulse={false}
                                rotation={null}
                                size={null}
                                spin={false}
                                swapOpacity={false}
                                symbol={false}
                                title=""
                                transform={null}
                              >
                                <svg
                                  aria-hidden="true"
                                  className="svg-inline--fa fa-tags fa-w-20 "
                                  data-icon="tags"
                                  data-prefix="fas"
                                  focusable="false"
                                  role="img"
                                  style={Object {}}
                                  viewBox="0 0 640 512"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M497.941 225.941L286.059 14.059A48 48 0 0 0 252.118 0H48C21.49 0 0 21.49 0 48v204.118a48 48 0 0 0 14.059 33.941l211.882 211.882c18.744 18.745 49.136 18.746 67.882 0l204.118-204.118c18.745-18.745 18.745-49.137 0-67.882zM112 160c-26.51 0-48-21.49-48-48s21.49-48 48-48 48 21.49 48 48-21.49 48-48 48zm513.941 133.823L421.823 497.941c-18.745 18.745-49.137 18.745-67.882 0l-.36-.36L527.64 323.522c16.999-16.999 26.36-39.6 26.36-63.64s-9.362-46.641-26.36-63.64L331.397 0h48.721a48 48 0 0 1 33.941 14.059l211.882 211.882c18.745 18.745 18.745 49.137 0 67.882z"
                                    fill="currentColor"
                                    style={Object {}}
                                  />
                                </svg>
                              </FontAwesomeIcon>
                            </div>
                          </S-PreIconWrapperDiv>
                        </div>
                      </S-ComponentWrapperDiv>
                    </CategoryTagList>
                  </div>
                </TagListWrapperDiv>
              </div>
            </AfterTitleDiv>
          </header>
        </WrapperHeader>
      </BodyHeader>
    </ArticleHeader>
    <MarkdownRenderer
      content="## test

bluhbluhbluh"
    >
      <ConvertedMdBody>
        <div
          className="emotion-30 emotion-31"
        >
          <ReactMarkdown
            plugins={
              Array [
                [Function],
                [Function],
              ]
            }
            renderers={
              Object {
                "footnoteDefinition": [Function],
                "footnoteReference": [Function],
              }
            }
            source="## test

bluhbluhbluh"
            transformImageUri={[Function]}
            transformLinkUri={[Function]}
          >
            <Root
              key="root-1-1-0"
              node={
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "position": Object {
                            "end": Object {
                              "column": 8,
                              "line": 1,
                              "offset": 7,
                            },
                            "start": Object {
                              "column": 4,
                              "line": 1,
                              "offset": 3,
                            },
                          },
                          "type": "text",
                          "value": "test",
                        },
                      ],
                      "depth": 2,
                      "position": Object {
                        "end": Object {
                          "column": 8,
                          "line": 1,
                          "offset": 7,
                        },
                        "start": Object {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "heading",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "position": Object {
                            "end": Object {
                              "column": 13,
                              "line": 3,
                              "offset": 23,
                            },
                            "start": Object {
                              "column": 1,
                              "line": 3,
                              "offset": 11,
                            },
                          },
                          "type": "text",
                          "value": "bluhbluhbluh",
                        },
                      ],
                      "position": Object {
                        "end": Object {
                          "column": 13,
                          "line": 3,
                          "offset": 23,
                        },
                        "start": Object {
                          "column": 1,
                          "line": 3,
                          "offset": 11,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 13,
                      "line": 3,
                      "offset": 23,
                    },
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "root",
                }
              }
            >
              <Heading
                key="heading-1-1-0"
                level={2}
                node={
                  Object {
                    "children": Array [
                      Object {
                        "position": Object {
                          "end": Object {
                            "column": 8,
                            "line": 1,
                            "offset": 7,
                          },
                          "start": Object {
                            "column": 4,
                            "line": 1,
                            "offset": 3,
                          },
                        },
                        "type": "text",
                        "value": "test",
                      },
                    ],
                    "depth": 2,
                    "position": Object {
                      "end": Object {
                        "column": 8,
                        "line": 1,
                        "offset": 7,
                      },
                      "start": Object {
                        "column": 1,
                        "line": 1,
                        "offset": 0,
                      },
                    },
                    "type": "heading",
                  }
                }
              >
                <h2>
                  <TextRenderer
                    key="text-1-4-0"
                    node={
                      Object {
                        "position": Object {
                          "end": Object {
                            "column": 8,
                            "line": 1,
                            "offset": 7,
                          },
                          "start": Object {
                            "column": 4,
                            "line": 1,
                            "offset": 3,
                          },
                        },
                        "type": "text",
                        "value": "test",
                      }
                    }
                    nodeKey="text-1-4-0"
                    value="test"
                  >
                    test
                  </TextRenderer>
                </h2>
              </Heading>
              <p
                key="paragraph-3-1-1"
              >
                <TextRenderer
                  key="text-3-1-0"
                  node={
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 13,
                          "line": 3,
                          "offset": 23,
                        },
                        "start": Object {
                          "column": 1,
                          "line": 3,
                          "offset": 11,
                        },
                      },
                      "type": "text",
                      "value": "bluhbluhbluh",
                    }
                  }
                  nodeKey="text-3-1-0"
                  value="bluhbluhbluh"
                >
                  bluhbluhbluh
                </TextRenderer>
              </p>
            </Root>
          </ReactMarkdown>
        </div>
      </ConvertedMdBody>
    </MarkdownRenderer>
  </ArticlePage>
</ThemeProvider>
`;
